--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
           <div class="cards__elem">
             <div class="card">
-              <div class="card__img" style="background-image: url(../img/card1.jpg)">
+              <div class="card__img" style="background-image: url(img/card1.jpg)">
                 <div class="card__discount center">-53%
                 </div>
               </div>
@@ -269,7 +269,7 @@
           </div>
           <div class="cards__elem">
             <div class="card">
-              <div class="card__img" style="background-image: url(../img/card2.jpg)">
+              <div class="card__img" style="background-image: url(img/card2.jpg)">
                 <div class="card__discount center">-53%
                 </div>
               </div>
@@ -302,7 +302,7 @@
           </div>
           <div class="cards__elem">
             <div class="card">
-              <div class="card__img" style="background-image: url(../img/card3.jpg)">
+              <div class="card__img" style="background-image: url(img/card3.jpg)">
                 <div class="card__discount center">-53%
                 </div>
               </div>
@@ -335,7 +335,7 @@
           </div>
           <div class="cards__elem">
             <div class="card">
-              <div class="card__img" style="background-image: url(../img/card1.jpg)">
+              <div class="card__img" style="background-image: url(img/card1.jpg)">
                 <div class="card__discount center">-53%
                 </div>
               </div>
@@ -368,7 +368,7 @@
           </div>
           <div class="cards__elem">
             <div class="card">
-              <div class="card__img" style="background-image: url(../img/card2.jpg)">
+              <div class="card__img" style="background-image: url(img/card2.jpg)">
                 <div class="card__discount center">-53%
                 </div>
               </div>
@@ -401,7 +401,7 @@
           </div>
           <div class="cards__elem">
             <div class="card">
-              <div class="card__img" style="background-image: url(../img/card3.jpg)">
+              <div class="card__img" style="background-image: url(img/card3.jpg)">
                 <div class="card__discount center">-53%
                 </div>
               </div>
@@ -439,7 +439,7 @@
 
           <div class="cards__elem">
             <div class="card">
-              <div class="card__img" style="background-image: url(../img/card1.jpg)">
+              <div class="card__img" style="background-image: url(img/card1.jpg)">
                 <div class="card__discount center">-53%
                 </div>
               </div>
@@ -472,7 +472,7 @@
           </div>
           <div class="cards__elem">
             <div class="card">
-              <div class="card__img" style="background-image: url(../img/card2.jpg)">
+              <div class="card__img" style="background-image: url(img/card2.jpg)">
                 <div class="card__discount center">-53%
                 </div>
               </div>
@@ -505,7 +505,7 @@
           </div>
           <div class="cards__elem">
             <div class="card">
-              <div class="card__img" style="background-image: url(../img/card3.jpg)">
+              <div class="card__img" style="background-image: url(img/card3.jpg)">
                 <div class="card__discount center">-53%
                 </div>
               </div>
@@ -538,7 +538,7 @@
           </div>
           <div class="cards__elem">
             <div class="card">
-              <div class="card__img" style="background-image: url(../img/card1.jpg)">
+              <div class="card__img" style="background-image: url(img/card1.jpg)">
                 <div class="card__discount center">-53%
                 </div>
               </div>
@@ -571,7 +571,7 @@
           </div>
           <div class="cards__elem">
             <div class="card">
-              <div class="card__img" style="background-image: url(../img/card2.jpg)">
+              <div class="card__img" style="background-image: url(img/card2.jpg)">
                 <div class="card__discount center">-53%
                 </div>
               </div>
@@ -604,7 +604,7 @@
           </div>
           <div class="cards__elem">
             <div class="card">
-              <div class="card__img" style="background-image: url(../img/card3.jpg)">
+              <div class="card__img" style="background-image: url(img/card3.jpg)">
                 <div class="card__discount center">-53%
                 </div>
               </div>
