--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
     </div>
     <div class="catalog">
       <div class="catalog__header">
-        <div class="switch switch_active" onclick="tabs('common-clothes')">павседневные портупеи</div>
-        <div class="switch" onclick="tabs('erotic-clothes')">эротичекие портупеи</div>
+        <div class="switch switch_active" onclick="tabs(event, 'common-clothes')">павседневные портупеи</div>
+        <div class="switch" onclick="tabs(event, 'erotic-clothes')">эротичекие портупеи</div>
       </div>
       <div class="catalog__body">
 
