--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
 <div class="modal-wrap">
   <div class="modal">
     <div class="modal-block">
-      <div class="modal-block__left" style="background: url(..img/card1.jpg);"></div>
+      <div class="modal-block__left" style="background: url(img/card1.jpg);"></div>
       <div class="modal-block__right">
         <div class="modal-block__title"> </div>
         <div class="modal-block__costs">
