--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="x-ua-compatible" content="IE=edge">
-    <meta http-equiv="Cache-Control" content="[no-cache]">
     <title>Тестовое</title>
     <link rel="stylesheet" type="text/css" href="css/slick.css"/>
     <link rel="stylesheet" type="text/css" href="css/slick-theme.css"/>
-    <link rel="stylesheet" href="css/styles.min.css">
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
 
@@ -18,12 +17,14 @@
     <div class="header__logo">
       <img src="img/logo.png" alt="">
     </div>
-    <nav class="header__nav">
+
+    <ul class="header__nav">
       <li><a href="/catalog">Каталог</a></li>
       <li><a href="/features">Преимущества</a></li>
       <li><a href="/reviews">Отзывы</a></li>
       <li><a href="/order">Как заказать</a></li>
-    </nav>
+     </ul>
+
    </div>
  </div>
 </header>
