--- a/index.html
+++ b/index.html
@@ -62,16 +62,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
 <section class="section-info">
 
   <div class="container">
@@ -93,22 +83,7 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<section class="section-photos">
+<div class="section-photos">
 
     <div class="photo">
 
@@ -122,21 +97,7 @@
     </div>
 
 
-</section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  </div>
 
 
 
@@ -697,6 +658,7 @@
 </section>
 
 
+
 <div class="modal-wrap">
   <div class="modal">
     <div class="modal-block">
@@ -729,15 +691,6 @@
   </div>
 </div>
 
-
-
-
-
-    <footer>
-
-</footer>
-
-    
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="js/slick.js"></script>
