--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
     <header>
  <div class="container">
    <div class="header">
-    <div class="header__logo">
-      <img src="img/logo.png" alt="">
+    <div class="header__logo logo">
+      <a href="/" class="logo__link">
+        <img src="img/logo.png" alt="">
+      </a>
     </div>
 
     <ul class="header__nav">
